[gd_scene load_steps=36 format=3 uid="uid://cy6seo05bukma"]

[ext_resource type="Script" path="res://enemies/EnemyDrone.gd" id="1_tlhve"]
[ext_resource type="Texture2D" uid="uid://it43llmi1s3k" path="res://sprites/sprites/bot/drone_shadow.png" id="2_5akrv"]
[ext_resource type="Texture2D" uid="uid://bp3u8x1ur6h2a" path="res://sprites/sprites/bot/drone_gun.png" id="3_3jswc"]
[ext_resource type="PackedScene" uid="uid://dbup3084spplv" path="res://behaviours/behaviours.tscn" id="3_5hdvn"]
[ext_resource type="Texture2D" uid="uid://vu721od76h0g" path="res://sprites/sprites/bot/drone_idle.png" id="4_d0x75"]
[ext_resource type="PackedScene" uid="uid://dd6rr6t2ksd8x" path="res://components/hitbox_component.tscn" id="5_2t7q2"]
[ext_resource type="Texture2D" uid="uid://7m1hoe3j7x7p" path="res://sprites/sprites/bot/drone_alert_v2.png" id="5_5vqra"]
[ext_resource type="Texture2D" uid="uid://dv1y76vr3qlg5" path="res://sprites/sprites/bot/drone_attack_v2_2.png" id="6_cxqix"]
[ext_resource type="Script" path="res://components/weapon.gd" id="6_jeukp"]
[ext_resource type="PackedScene" uid="uid://coxmddbc5y7vj" path="res://effects/hard_surface_sparks.tscn" id="6_yj1i6"]
[ext_resource type="PackedScene" uid="uid://df8dta61nd0i" path="res://components/health_component.tscn" id="7_i56ju"]
[ext_resource type="PackedScene" uid="uid://8wpsaxivv7xs" path="res://weapons/bullet.tscn" id="7_vo0rr"]
[ext_resource type="Script" path="res://components/ImpactComponent.gd" id="10_d84db"]
[ext_resource type="Script" path="res://finite_state_machine/StateMachine.gd" id="12_fqhc6"]
[ext_resource type="Texture2D" uid="uid://ck15gegvdbve3" path="res://sprites/2d_lights_and_shadows_neutral_point_light.webp" id="12_fxggr"]
[ext_resource type="PackedScene" uid="uid://drvq40vdasp26" path="res://effects/drone_hurt_particle_effect.tscn" id="12_nev84"]
[ext_resource type="Script" path="res://enemies/Idle.gd" id="13_go3rp"]
[ext_resource type="Script" path="res://finite_state_machine/EnemyAlertState.gd" id="14_ajot6"]
[ext_resource type="Script" path="res://finite_state_machine/EnemyAttackState.gd" id="15_iolgv"]
[ext_resource type="Texture2D" uid="uid://d3uhhfbtcapvt" path="res://sprites/sprites/bot/drone_fragment.png" id="18_c5rnu"]
[ext_resource type="Texture2D" uid="uid://cv1kynbh5djqf" path="res://sprites/sprites/bot/large_muzzle_flash.png" id="18_qcirg"]

[sub_resource type="Animation" id="Animation_xu4mr"]
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Gun1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -60)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Gun2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 60)]
}

[sub_resource type="Animation" id="Animation_b55sn"]
resource_name = "deploy_guns"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Gun1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.8, 2.2),
"transitions": PackedFloat32Array(10, 10, 10, 1),
"update": 0,
"values": [Vector2(10, -60), Vector2(100, -58.556), Vector2(100, -120), Vector2(83, -120)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Gun2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 1.9, 2.3),
"transitions": PackedFloat32Array(9, 10, 10, 1),
"update": 0,
"values": [Vector2(10, 60), Vector2(100, 60.444), Vector2(100, 120), Vector2(83, 120)]
}

[sub_resource type="Animation" id="Animation_hllq1"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0698132, 0.0523599]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -5), Vector2(2.08165e-12, 7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k8jdy"]
_data = {
"RESET": SubResource("Animation_xu4mr"),
"deploy_guns": SubResource("Animation_b55sn"),
"idle": SubResource("Animation_hllq1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_x2rme"]
radius = 144.0

[sub_resource type="CircleShape2D" id="CircleShape2D_w4n0x"]
radius = 144.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kyt42"]
radius = 1043.46

[sub_resource type="Curve" id="Curve_3w06y"]
_data = [Vector2(0.00632911, 0.983756), 0.0, 0.0, 0, 0, Vector2(0.86076, 0.798108), -0.970557, -0.970557, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_nrefn"]
curve = SubResource("Curve_3w06y")

[sub_resource type="Curve" id="Curve_c6lrg"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, -360), 0.0, 0.0, 0, 0, Vector2(1, 360), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ot8rn"]
curve = SubResource("Curve_c6lrg")

[sub_resource type="Curve" id="Curve_8pkdr"]
_data = [Vector2(0.00843882, 0.993038), 0.0, 0.178373, 0, 0, Vector2(0.862869, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.49643), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_4m17f"]
curve = SubResource("Curve_8pkdr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5id6l"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = -720.0
angle_max = 720.0
angle_curve = SubResource("CurveTexture_ot8rn")
direction = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
spread = 180.0
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
tangential_accel_min = -50.0
tangential_accel_max = 63.79
scale_min = 0.0
scale_curve = SubResource("CurveTexture_4m17f")
alpha_curve = SubResource("CurveTexture_nrefn")

[node name="EnemyDrone" type="CharacterBody2D"]
use_parent_material = true
position = Vector2(1395, 1191)
motion_mode = 1
script = ExtResource("1_tlhve")
death_effect = ExtResource("12_nev84")

[node name="DroneShadow" type="Sprite2D" parent="."]
position = Vector2(120, 275)
texture = ExtResource("2_5akrv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k8jdy")
}

[node name="Behaviours" parent="." instance=ExtResource("3_5hdvn")]
collision_detection_range = 800
draw_context_maps = false

[node name="Sprites" type="Node2D" parent="."]

[node name="Gun1" type="Sprite2D" parent="Sprites"]
position = Vector2(10, -60)
scale = Vector2(2, 2)
texture = ExtResource("3_3jswc")

[node name="Weapon" type="Node" parent="Sprites/Gun1" node_paths=PackedStringArray("muzzle", "muzzle_flash")]
script = ExtResource("6_jeukp")
muzzle = NodePath("../Marker2D")
rate_of_fire = 0.5
bullet = ExtResource("7_vo0rr")
muzzle_flash = NodePath("../Flash")

[node name="Marker2D" type="Marker2D" parent="Sprites/Gun1"]
position = Vector2(56, 1.5)

[node name="Flash" type="Sprite2D" parent="Sprites/Gun1"]
visible = false
position = Vector2(76, 1.5)
rotation = 1.5708
texture = ExtResource("18_qcirg")

[node name="Gun2" type="Sprite2D" parent="Sprites"]
position = Vector2(10, 60)
scale = Vector2(2, 2)
texture = ExtResource("3_3jswc")

[node name="Weapon" type="Node" parent="Sprites/Gun2" node_paths=PackedStringArray("muzzle", "muzzle_flash")]
script = ExtResource("6_jeukp")
muzzle = NodePath("../Marker2D")
rate_of_fire = 0.5
bullet = ExtResource("7_vo0rr")
muzzle_flash = NodePath("../Flash")

[node name="Marker2D" type="Marker2D" parent="Sprites/Gun2"]
position = Vector2(56, 1.5)

[node name="Flash" type="Sprite2D" parent="Sprites/Gun2"]
visible = false
position = Vector2(76, 1.5)
rotation = 1.5708
texture = ExtResource("18_qcirg")

[node name="MainBodyIdle" type="Sprite2D" parent="Sprites"]
texture = ExtResource("4_d0x75")

[node name="MainBodyAlert" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("5_5vqra")

[node name="MainBodyAttack" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("6_cxqix")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "impact_component") instance=ExtResource("5_2t7q2")]
position = Vector2(2.08165e-12, 2.08165e-12)
health_component = NodePath("../HealthComponent")
hit_effect = ExtResource("6_yj1i6")
impact_component = NodePath("../ImpactComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_x2rme")

[node name="ImpactComponent" type="Node" parent="."]
script = ExtResource("10_d84db")

[node name="HealthComponent" parent="." instance=ExtResource("7_i56ju")]
position = Vector2(2.08165e-12, 2.08165e-12)
hurt_effect = ExtResource("12_nev84")
MAX_HEALTH = 400

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("CircleShape2D_w4n0x")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_kyt42")
debug_color = Color(0.878431, 0.333333, 0.180392, 0.419608)

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.25
shadow_enabled = true
texture = ExtResource("12_fxggr")
texture_scale = 6.5

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("12_fqhc6")
state = NodePath("EnemyIdleState")

[node name="EnemyIdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "detection_area", "behaviours")]
script = ExtResource("13_go3rp")
actor = NodePath("../..")
detection_area = NodePath("../../Area2D")
behaviours = NodePath("../../Behaviours")

[node name="EnemyAlertState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "search_area", "behaviours")]
script = ExtResource("14_ajot6")
actor = NodePath("../..")
search_area = NodePath("../../Area2D")
behaviours = NodePath("../../Behaviours")

[node name="EnemyAttackState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "search_area", "behaviours")]
script = ExtResource("15_iolgv")
actor = NodePath("../..")
search_area = NodePath("../../Area2D")
behaviours = NodePath("../../Behaviours")

[node name="DroneExplosionFlames" type="GPUParticles2D" parent="."]
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_5id6l")
texture = ExtResource("18_qcirg")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="DroneExplosionParts" type="GPUParticles2D" parent="."]
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_5id6l")
texture = ExtResource("18_c5rnu")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[connection signal="impact" from="ImpactComponent" to="." method="_on_impact_component_impact"]
[connection signal="die" from="HealthComponent" to="." method="_on_die"]
[connection signal="player_lost" from="FiniteStateMachine/EnemyAlertState" to="." method="_on_player_lost"]
[connection signal="player_lost" from="FiniteStateMachine/EnemyAttackState" to="." method="_on_player_lost"]
